syntax = "proto3";

package io.harness.virtualstack;

option java_multiple_files = true;
option go_package = "980_commons";

message VirtualStackRequest {
  bytes global_context = 1;
}

message VirtualStackResponse {}
